// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KayttoOikeudetManager manages users correcly should handle adds and edits 1`] = `
Array [
  Object {
    "email": "a1@vayla.fi",
    "etunimi": "EtunimiA1",
    "kayttajatunnus": "A1",
    "muokattavissa": false,
    "organisaatio": "Väylävirasto",
    "sukunimi": "SukunimiA1",
    "tyyppi": "PROJEKTIPAALLIKKO",
    "yleinenYhteystieto": true,
  },
  Object {
    "email": "a2@organisaatio.fi",
    "etunimi": "EtunimiA2",
    "kayttajatunnus": "A2",
    "muokattavissa": false,
    "organisaatio": "ELY",
    "sukunimi": "SukunimiA2",
    "tyyppi": "VARAHENKILO",
  },
  Object {
    "email": "a3@vayla.fi",
    "etunimi": "EtunimiA3",
    "kayttajatunnus": "A3",
    "muokattavissa": true,
    "organisaatio": "Väylävirasto",
    "sukunimi": "SukunimiA3",
    "tyyppi": "VARAHENKILO",
  },
  Object {
    "email": "lx5@organisaatio.fi",
    "etunimi": "EtunimiLX5",
    "kayttajatunnus": "LX5",
    "muokattavissa": false,
    "organisaatio": "ramboll",
    "sukunimi": "SukunimiLX5",
    "tyyppi": null,
  },
]
`;

exports[`KayttoOikeudetManager manages users correcly should handle adds and edits 2`] = `
Array [
  Object {
    "elyOrganisaatio": undefined,
    "email": "a1@vayla.fi",
    "etunimi": "EtunimiA1",
    "evkOrganisaatio": undefined,
    "kayttajatunnus": "A1",
    "muokattavissa": false,
    "organisaatio": "Väylävirasto",
    "puhelinnumero": "123456789",
    "sukunimi": "SukunimiA1",
    "tyyppi": "PROJEKTIPAALLIKKO",
    "yleinenYhteystieto": true,
  },
  Object {
    "elyOrganisaatio": undefined,
    "email": "a2@organisaatio.fi",
    "etunimi": "EtunimiA2",
    "evkOrganisaatio": undefined,
    "kayttajatunnus": "A2",
    "muokattavissa": false,
    "organisaatio": "ELY",
    "puhelinnumero": "123456789",
    "sukunimi": "SukunimiA2",
    "tyyppi": "VARAHENKILO",
    "yleinenYhteystieto": false,
  },
  Object {
    "email": "a3@vayla.fi",
    "etunimi": "EtunimiA3",
    "kayttajatunnus": "A3",
    "muokattavissa": true,
    "organisaatio": "Väylävirasto",
    "puhelinnumero": "123456789",
    "sukunimi": "SukunimiA3",
    "tyyppi": "VARAHENKILO",
  },
  Object {
    "email": "lx5@organisaatio.fi",
    "etunimi": "EtunimiLX5",
    "kayttajatunnus": "LX5",
    "muokattavissa": false,
    "organisaatio": "ramboll",
    "sukunimi": "SukunimiLX5",
    "tyyppi": null,
  },
  Object {
    "elyOrganisaatio": undefined,
    "email": "a4@organisaatio.fi",
    "etunimi": "EtunimiA4",
    "evkOrganisaatio": undefined,
    "kayttajatunnus": "A4",
    "muokattavissa": true,
    "organisaatio": "ELY",
    "puhelinnumero": "123456789",
    "sukunimi": "SukunimiA4",
    "tyyppi": undefined,
    "yleinenYhteystieto": true,
  },
]
`;
